<resources  xmlns:tools="http://schemas.android.com/tools">
    <string formatted="false" name="brick_square">Create square</string>
    <string formatted="false" name="brick_square_name">Name</string>
    <string formatted="false" name="brick_square_pos">Position (X, Y)</string>
    <string formatted="false" name="brick_square_size">Width, Height</string>
    <string formatted="false" name="brick_square_color">Color</string>
    <string formatted="false" name="brick_square_trans">Transparency</string>
    <string formatted="false" name="brick_square_rot">Rotation</string>
    <string formatted="false" name="brick_square_borders">Border radius</string>
    <string formatted="false" name="brick_del_square">Delete square</string>
    <string formatted="false" name="brick_delete_files">Delete project file</string>
    <string formatted="false" name="brick_read_files">Read variable</string>
    <string formatted="false" name="brick_read_files2">from project file</string>
    <string formatted="false" name="brick_write_files">Write variable</string>
    <string formatted="false" name="brick_write_files2">to project file</string>
    <string formatted="false" name="brick_open_files">Open file from project</string>
    <string formatted="false" name="brick_move_files">Copy file to download</string>
    <string formatted="false" name="brick_move_downloads">Copy file to project</string>
    <string formatted="false" name="brick_save_look_files">Look to project file</string>
    <string formatted="false" name="brick_set_look_files">Look from project file</string>
    <string formatted="false" name="brick_files_url">Save file in project</string>
    <string formatted="false" name="brick_sound_files">Play sound from project</string>
    <string formatted="false" name="dialog_create">Create dialog</string>
    <string formatted="false" name="dialog_name">Dialog name</string>
    <string formatted="false" name="dialog_title">Title</string>
    <string formatted="false" name="dialog_message">Message</string>
    <string formatted="false" name="dialog_text">Text</string>
    <string formatted="false" name="dialog_default">Default text</string>
    <string formatted="false" name="dialog_positive">Add button \"Yes\"</string>
    <string formatted="false" name="dialog_negative">Add button \"No\"</string>
    <string formatted="false" name="dialog_neutral">Add button \"Later\"</string>
    <string formatted="false" name="dialog_edit">Add edit text</string>
    <string formatted="false" name="dialog_radio">Add radio</string>
    <string formatted="false" name="dialog_callback">Save answer</string>
    <string formatted="false" name="dialog_button">Changed button</string>
    <string formatted="false" name="dialog_value">Value</string>
    <string formatted="false" name="dialog_show">Show Dialog</string>
    <string formatted="false" name="look_from_table">Look from tables</string>
    <string formatted="false" name="look_to_table">Look to tables</string>
    <string formatted="false" name="table_r">Table (red)</string>
    <string formatted="false" name="table_g">Table (green)</string>
    <string formatted="false" name="table_b">Table (blue)</string>
    <string formatted="false" name="table_a">Table (alpha)</string>
    <string formatted="false" name="firebase_delete">Delete from FireBase</string>
    <string formatted="false" name="firebase_write">Write to FireBase</string>
    <string formatted="false" name="firebase_read">Read from FireBase</string>
    <string formatted="false" name="firebase_base">FireBase ID</string>
    <string formatted="false" name="firebase_key">Key</string>
    <string formatted="false" name="firebase_value">Value</string>
    <string formatted="false" name="firebase_store">and store in</string>
    <string formatted="false" name="brick_set_callback2">callback to variable</string>
    <string formatted="false" name="brick_set_callback">Add to WebView</string>
    <string formatted="false" name="brick_eval_web2">in WebView</string>
    <string formatted="false" name="brick_eval_web">Run JS</string>
    <string formatted="false" name="set_native_layer">Set Native Views layer</string>
    <string formatted="false" name="videoplayer_params">(\'myVideoPlayer\')</string>
    <string formatted="false" name="view_params">(\'myView\')</string>
    <string formatted="false" name="video_time">videoplayer time</string>
    <string formatted="false" name="is_video_playing">is videoplayer playing</string>
    <string formatted="false" name="view_height">view height</string>
    <string formatted="false" name="view_width">view width</string>
    <string formatted="false" name="view_y">position y view</string>
    <string formatted="false" name="view_x">position x view</string>
    <string formatted="false" name="seek_video2">to (seconds)</string>
    <string formatted="false" name="seek_video">Seek VideoPlayer</string>
    <string formatted="false" name="play_video">Start VideoPlayer</string>
    <string formatted="false" name="pause_video">Pause VideoPlayer</string>
    <string formatted="false" name="is_password">is password</string>
    <string formatted="false" name="corner_radius">corner radius</string>
    <string formatted="false" name="max_length">max length</string>
    <string formatted="false" name="type">type (text, number)</string>
    <string formatted="false" name="font">font (project files)</string>
    <string formatted="false" name="default_text">default text</string>
    <string formatted="false" name="alignment">alignment (left, center, right)</string>
    <string formatted="false" name="hint_color">hint color</string>
    <string formatted="false" name="hint_text">hint text</string>
    <string formatted="false" name="bg_color">BG color</string>
    <string formatted="false" name="text_color">text color</string>
    <string formatted="false" name="text_size">text size</string>
    <string formatted="false" name="styles">Styles</string>
    <string formatted="false" name="save_to_variable">store to variable</string>
    <string formatted="false" name="brick_create_textfield">Create TextField</string>
    <string formatted="false" name="project_file">project file</string>
    <string formatted="false" name="control_enabled">show controls</string>
    <string formatted="false" name="loop_enabled">loop video</string>
    <string formatted="false" name="position">position (x, y)</string>
    <string formatted="false" name="size_wh">size (width, height)</string>
    <string formatted="false" name="brick_video_player">Create VideoPlayer</string>
    <string formatted="false" name="brick_photo">Take photo from camera and use as look</string>
    <string formatted="false" name="brick_cut_look2">to (x, y)</string>
    <string formatted="false" name="brick_cut_look1">from (x, y)</string>
    <string formatted="false" name="brick_cut_look">Crop look</string>
    <string formatted="false" name="bt_permissions_denied">Please grant a permission</string>
    <string formatted="false" name="brick_shader2">fragment shader</string>
    <string formatted="false" name="brick_shader1">vertex shader</string>
    <string formatted="false" name="brick_shader">Set GLSL shader</string>
    <string formatted="false" name="open">open</string>
    <string formatted="false" name="formula_editor_function_floatarray">FloatArray size</string>
    <string formatted="false" name="formula_editor_function_floatarray_parameter">(\'FloatArray\')</string>
    <string formatted="false" name="brick_delete_float2">from FloatArray</string>
    <string formatted="false" name="brick_delete_float">Delete element at index</string>
    <string formatted="false" name="brick_put_float3">with index</string>
    <string formatted="false" name="brick_put_float2">to FloatArray</string>
    <string formatted="false" name="brick_put_float">Insert</string>
    <string formatted="false" name="brick_table_to_float2">To FloatArray</string>
    <string formatted="false" name="brick_table_to_float">Add Table</string>
    <string formatted="false" name="brick_create_float">Set FloatArray with name</string>
    <string formatted="false" name="brick_normalize_img5">B:</string>
    <string formatted="false" name="brick_normalize_img4">G:</string>
    <string formatted="false" name="brick_normalize_img3">R:</string>
    <string formatted="false" name="brick_normalize_img2">And save values to tables</string>
    <string formatted="false" name="brick_normalize_img">Normalize IMG (from project files)</string>
    <string formatted="false" name="brick_grayscale_img">Grayscale IMG (from project files)</string>
    <string formatted="false" name="brick_resize_img3">new size (x, y)</string>
    <string formatted="false" name="brick_resize_img2">file</string>
    <string formatted="false" name="brick_resize_img">Resize IMG (from project files)</string>
    <string formatted="false" name="brick_predict_nn3">and store result in</string>
    <string formatted="false" name="brick_predict_nn2">FloatArray</string>
    <string formatted="false" name="brick_predict_nn">Predict .onnx model</string>
    <string formatted="false" name="brick_unload_nn">Unload .onnx model</string>
    <string formatted="false" name="brick_load_nn">Load .onnx model from project file</string>
    <string formatted="false" name="brick_lunoscript">Execute LunoScript</string>
    <string name="formula_editor_custom_functions_header">Libaries</string>
    <string formatted="false" name="brick_ask_gpt">Ask ChatGPT</string>
    <string formatted="false" name="brick_ask_gpt2">System prompt</string>
    <string formatted="false" name="brick_unkown">Unkown brick</string>
    <string formatted="false" name="brick_choose_file">Choose file</string>
    <string formatted="false" name="brick_choose_file2">save name to variable</string>
    <string formatted="false" name="brick_choose_file3">and copy to project files</string>
    <string formatted="false" name="brick_set_hitbox">Set look, but keep hitbox</string>
    <string formatted="false" name="ogurec">А ты любишь огурцы?</string>
    <string formatted="false" name="only_numbers">Only numbers and fractional numbers allowed here</string>
    <string formatted="false" name="project_physics_height">Physics height area</string>
    <string formatted="false" name="project_physics_width">Physics width area</string>
    <string formatted="false" name="brick_play_files_wait">Play sound from project files</string>
    <string formatted="false" name="brick_play_files_wait2">and wait</string>
    <string formatted="false" name="brick_clear_scene">Clear scene cache</string>
    <string formatted="false" name="brick_set_stop_sounds">Set \"Stop Sounds\" to</string>
    <string formatted="false" name="brick_set_save_scenes">Set \"Save scenes\" to</string>
    <string formatted="false" name="brick_test">Show system interface</string>
    <string formatted="false" name="formula_editor_object_look_height">look height</string>
    <string formatted="false" name="formula_editor_object_look_width">look width</string>
    <string formatted="false" name="brick_string_to_table">Split</string>
    <string formatted="false" name="brick_string_to_table_x">x delimiter</string>
    <string formatted="false" name="brick_string_to_table_y">y delimiter</string>
    <string formatted="false" name="brick_string_to_table_name">and store in table</string>
    <string formatted="false" name="stage_dialog_back">Back</string>
    <string formatted="false" name="stage_dialog_resume">Resume</string>
    <string formatted="false" name="stage_dialog_restart">Restart</string>
    <string formatted="false" name="stage_dialog_axes_on">Axes on</string>
    <string formatted="false" name="stage_dialog_maximize">Maximize/\nstretch</string>
    <string formatted="false" name="stage_dialog_screenshot">Preview</string>
    <string formatted="false" name="stage_dialog_embroidery">Embroidery</string>
</resources>