<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2022 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/brick_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone" />

    <org.catrobat.catroid.ui.BrickLayout
        android:id="@+id/brick_create_table_layout"
        style="@style/BrickContainer.Neural.Medium">

        <include layout="@layout/icon_brick_category_neural" />

        <TextView
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_put_float" />

        <TextView
            android:id="@+id/brick_put_float_value"
            style="@style/BrickEditText" />

        <TextView
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_put_float2"
            app:layout_newLine="true" />

         <TextView
            android:id="@+id/brick_put_float_float"
            style="@style/BrickEditText" />

        <TextView
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_put_float3"
            app:layout_newLine="true" />

        <TextView
            android:id="@+id/brick_put_float_index"
            style="@style/BrickEditText" />

    </org.catrobat.catroid.ui.BrickLayout>

</LinearLayout>